--- a/public/index.html
+++ b/public/index.html
@@ -741,19 +741,19 @@
               <a href="">
                 <i class="fa fa-map-marker" aria-hidden="true"></i>
                 <span>
-                  Location
+                  Rue Abbe Cuypers 3, 1040 Brussels
                 </span>
               </a>
               <a href="">
                 <i class="fa fa-phone" aria-hidden="true"></i>
                 <span>
-                  Call +01 1234567890
+                  Call +32 2 741 24 22
                 </span>
               </a>
               <a href="">
                 <i class="fa fa-envelope" aria-hidden="true"></i>
                 <span>
-                  demo@gmail.com
+                  eaglescryptoinvestment@gmail.com
                 </span>
               </a>
             </div>
@@ -779,7 +779,13 @@
               Info
             </h4>
             <p>
-              necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful
+              🎯 Eagle will not ask for your pin or password to resolve Any issues you are having.
+            </p>
+            <p>
+              🎯 Please do not share your personal details with anyone claiming to be our representative.
+            </p>
+            <p>
+              🎯 Always use the live chat button on the web or contact group administrator to get your issues resolved.
             </p>
           </div>
         </div>
